[gd_scene load_steps=2 format=3 uid="uid://bvmw7n8qkx3hs"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_x7m2p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x7m2p")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.08, 1)

[node name="GradientTop" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0, 0.2, 0.3)

[node name="GradientBottom" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -300.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.2, 0.05, 0.3, 0.4)

[node name="Stars" type="CPUParticles2D" parent="Background"]
position = Vector2(640, 360)
amount = 150
lifetime = 30.0
preprocess = 15.0
emission_shape = 3
emission_rect_extents = Vector2(640, 360)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 15.0
scale_amount_min = 1.0
scale_amount_max = 3.0
color = Color(1, 1, 1, 0.6)

[node name="TitleGlow" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -203.0
offset_right = 253.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 0.3)
theme_override_font_sizes/font_size = 64
text = "SPACE SHOOTER"
horizontal_alignment = 1

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "SPACE SHOOTER"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -130.0
offset_right = 150.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "V2 - Ultra HD Edition"
horizontal_alignment = 1

[node name="ShipsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -110.0
offset_right = 100.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "SHIPS"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="DonateButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 170.0
offset_right = 100.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "ðŸ’– DONATE"

[node name="Credits" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "NEXO GAMES"
horizontal_alignment = 1

[node name="Controls" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 240.0
offset_right = 200.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "Controls:
WASD/Arrows - Move
Space/Click - Shoot"
horizontal_alignment = 1

[connection signal="pressed" from="ShipsButton" to="." method="_on_ships_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="DonateButton" to="." method="_on_donate_button_pressed"]
